  * Added ft:tokenize-nodes() function to full-text module
  * New XQuery 3.0 functions
    - fn:parse-xml-fragment#1
  * Added support for transient maps to the
    http://www.zorba-xquery.com/modules/store/data-structures/unordered-map module.
  * Added support for fragments to fn:path
  * Positional pagination support for collections
  * Incremental maintenance for general indexes.
	
Optimizations:
  * Small optimization of comparison operations.
  * Improved hoist rule: tighter hoisting of expressions (also fixes bug #967428,
    which is only a performance bug)
  * Optimized hash sets used by fn:distinct-values and nodes-distinct
  * Optimized hash function used for nodes (also fixes bug #1010051)
  * No more serialization of compiler expressions.
  * Big rewrite of plan serializer internals, resulting in big performance improvement.
  * Avoid (if possible) treat expr for checking that the value of a non-external
    global variable conforms to the type declaration of the vatiable.
  * Streaming execution for tumbling windows (also fixes bug #1010051).

Bug Fixes/Other Changes:
  * Fixed bug #1002993 (bug during revalidation after update; improper condition
    for calling TypeOps::get_atomic_type_code() from
    SchemaValidatorImpl::isPossibleSimpleContentRevalImpl())
  * Fixed bug #867357 (Improved parser error messages)
  * Fixed bug #932314 (non-comparable values must be treated as distinct by
    fn:distinct-values)
  * Fixed bug #1015580 (Add base64_streambuf / replace inefficient base64 code)
  * Fixed bug #1022557 (subsequence function applied on window variable)
  * Fixed bug #9910884 (raise XUST0001 in trycatch with mixed updating and simple clauses)
  * Fixed bug #854506 (ugly type error messages) and partial fix for bug #867008
  * Fixed bug #1008082 (bug in transform expr when a copy var is not used anywhere)
  * Fixed bug #1003023$ (optimizer problems due to common subexpression after
    var folding into if-then-else)