@@ -481,6 +481,7 @@ public:
 
   static const char* ZORBA_FETCH_FN_NS;
   static const char* ZORBA_NODE_FN_NS;
+  static const char* ZORBA_ITEM_FN_NS;
   static const char* ZORBA_XML_FN_NS;
 #ifndef ZORBA_NO_FULL_TEXT
   static const char* ZORBA_FULL_TEXT_FN_NS;
