@@ -222,6 +222,7 @@
   FN_ZORBA_INTROSPECT_SCTX_IN_SCOPE_ATTRIBUTE_GROUPS_0,
   FN_ZORBA_INTROSPECT_SCTX_OPTION_1,
   FN_ZORBA_INTROSPECT_SCTX_FUNCTION_ANNOTATIONS_2,
+  FN_ZORBA_ITEM_ALLOCATED_SIZE_1,
   FN_ZORBA_JSON_PARSE_INTERNAL_2,
   FN_ZORBA_JSON_SERIALIZE_INTERNAL_2,
   FN_JSONIQ_PARSE_JSON_1,
