@@ -302,6 +302,8 @@ namespace zorba{
 
     class FunctionAnnotationsIterator;
 
+    class AllocatedSizeIterator;
+
     class JSONParseInternal;
 
     class JSONSerializeInternal;
@@ -1121,6 +1123,9 @@ public:
 
     virtual void beginVisit ( const FunctionAnnotationsIterator& ) = 0;
     virtual void endVisit   ( const FunctionAnnotationsIterator& ) = 0;
+
+    virtual void beginVisit ( const AllocatedSizeIterator& ) = 0;
+    virtual void endVisit   ( const AllocatedSizeIterator& ) = 0;
 
     virtual void beginVisit ( const JSONParseInternal& ) = 0;
     virtual void endVisit   ( const JSONParseInternal& ) = 0;
